# project

./: frames_2024-03-24_13.19.55.gv  frames_2024-06-04_01.22.42.gv
install/: local_setup.sh  setup.sh
install/bumperbot_bringup/share/bumperbot_bringup/: local_setup.sh  package.sh
install/bumperbot_controller/share/bumperbot_controller/: local_setup.sh  package.sh  package.xml
install/bumperbot_cpp_example/lib/bumperbot_cpp_example/: simple_parameter  simple_publisher  simple_service_client  simple_service_server  simple_subscriber  simple_tf_kinematics  simple_turtlesim_kinematics
install/bumperbot_cpp_example/share/bumperbot_cpp_example/: local_setup.sh  package.sh  package.xml
install/bumperbot_description/share/bumperbot_description/: local_setup.sh  package.sh
install/bumperbot_firmware/lib/bumperbot_firmware/: simple_serial_reciever  simple_serial_transmitter  simple_serial_transmitter.py
install/bumperbot_firmware/share/bumperbot_firmware/: bumperbot_interface.xml  package.sh  package.xml
install/bumperbot_msgs/share/bumperbot_msgs/: package.sh  package.xml
install/bumperbot_py_example/lib/bumperbot_py_example/: simple_tf_kinematics
install/bumperbot_py_example/share/bumperbot_py_example/: package.sh  package.xml
log/: latest_build  latest_list
src/bumperbot_bringup/: CMakeLists.txt  package.xml
src/bumperbot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/bumperbot_controller/: CMakeLists.txt
src/bumperbot_controller/config/: joy_config.yaml  joy_teleop.yaml
src/bumperbot_controller/src/: simple_controller.cpp
src/bumperbot_description/: CMakeLists.txt  package.xml
src/bumperbot_description/launch/: display.launch.py
src/bumperbot_description/rviz/: display.rviz
src/bumperbot_description/urdf/: bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
src/bumperbot_firmware/: CMakeLists.txt
src/bumperbot_firmware/firmware/robot_control/: robot_control.ino
src/bumperbot_firmware/firmware/serial_motor_control/: serial_motor_control.ino
src/bumperbot_firmware/firmware/simple_encoder_reader/: simple_encoder_reader.ino
src/bumperbot_firmware/firmware/simple_serial_reciever/: simple_serial_reciever.ino
src/bumperbot_firmware/firmware/simple_serial_transmitter/: simple_serial_transmitter.ino
src/bumperbot_firmware/include/bumperbot_firmware/: bumperbot_interface.hpp
src/bumperbot_firmware/launch/: hardware_interface.launch.py
src/bumperbot_firmware/src/: bumperbot_interface.cpp  simple_serial_reciever.cpp  simple_serial_transmitter.cpp
src/bumperbot_msgs/: CMakeLists.txt
src/bumperbot_msgs/srv/: GetTransform.srv
(+35 files in other folders)
